GAS25-6 Beam GA

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,7 +83,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageUserWidget.WidgetControllerSet",NewName="/Script/ProjectGASRPG.MageUserWidget.OnSetWidgetController")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.PhysicalAttack_Max",NewName="/Script/ProjectGASRPG.MMC_MaxPhysicalAttack")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BroadcastInitialValue")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpell",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpell",NewName="/Script/ProjectGASRPG.ProjectileGA")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponMesh",NewName="/Script/ProjectGASRPG.MageCharacterBase.Weapon")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MagaGameMode",NewName="/Script/ProjectGASRPG.MageGameMode")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassInfo",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset")
@@ -132,21 +132,25 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.AbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.DefaultAbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.CheckButtonEnableOnSkillIconSelected",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.OnSkillIconSelectedDelegate")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectilesNum")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectilesNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.ProjectileGA.MaxProjectilesNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.ProjectileGA.MaxProjectilesNum")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityBackgroundImage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipButtonPressed",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipSkillButtonPressed")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconReassignedDelegate",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconResetDelegate")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.Damage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.TypeDamage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChanged",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChangedCallback")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeath",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeathCallback")
-+FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnProjectiles",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnMultiProjectiles")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnProjectiles",NewName="/Script/ProjectGASRPG.ProjectileGA.SpawnMultiProjectiles")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.TaggedMontage.SocketTag",NewName="/Script/ProjectGASRPG.TaggedMontage.AttackSocketTag")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum",NewName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectilesNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum",NewName="/Script/ProjectGASRPG.ProjectileGA.MaxProjectilesNum")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputConfig",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputDataAsset",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputConfigDataAsset",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.MageInputConfig",NewName="/Script/ProjectGASRPG.MagePlayerController.InputConfigDataAsset")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA",NewName="/Script/ProjectGASRPG.ProjectileGA")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageSummonAbility",NewName="/Script/ProjectGASRPG.SummonGA")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageMeleeAttackGA",NewName="/Script/ProjectGASRPG.MeleeAttackGA")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.BeamGameplayAbility",NewName="/Script/ProjectGASRPG.BeamGA")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
