--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,3 +1,6 @@
+[ConsoleVariables]
+net.MaxRPCPerNetUpdate=10
+
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartLevel.StartLevel
 EditorStartupMap=/Game/Maps/StartLevel.StartLevel
