--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,4 @@ CopyrightNotice=
 /** 指定全局类 */
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 AbilitySystemGlobalsClassName="/Script/ProjectGASRPG.MageAbilitySystemGlobals"
+GameplayCueNotifyPaths="/Game/Blueprints/GAS/GameplayCue"
