GAS25-14 获取第一目标距离最近的其他Actor

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -154,6 +154,8 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageSummonAbility",NewName="/Script/ProjectGASRPG.SummonGA")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageMeleeAttackGA",NewName="/Script/ProjectGASRPG.MeleeAttackGA")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.BeamGameplayAbility",NewName="/Script/ProjectGASRPG.BeamGA")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.StoreAdditonalTarget",NewName="/Script/ProjectGASRPG.BeamGA.StoreAdditionalTarget")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestPlayer",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestActors")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
