GAS2-18 按蓄力时间增强技能

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -156,6 +156,8 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.BeamGameplayAbility",NewName="/Script/ProjectGASRPG.BeamGA")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.StoreAdditonalTarget",NewName="/Script/ProjectGASRPG.BeamGA.StoreAdditionalTarget")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestPlayer",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestActors")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback",NewName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback",NewName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
