--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -158,6 +158,8 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestPlayer",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestActors")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback",NewName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback",NewName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bIsElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
