--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -106,14 +106,14 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypes",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageType_To_AbilityDamage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocation",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponAttachSocket")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_WeaponSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.BloodEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetBloodEffect",NewName="/Script/ProjectGASRPG.ICombatInterface.GetHitEffect")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackedEffect",NewName="/Script/ProjectGASRPG.MageCharacterBase.HitEffect")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.PlayerAbilities",NewName="/Script/ProjectGASRPG.MageCharacter.CharacterAbilities")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.OverlayWidgetController.OnAbilitiesGivenCallback",NewName="/Script/ProjectGASRPG.OverlayWidgetController.OnStartupAbilitiesGivenCallback")
@@ -160,6 +160,9 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback",NewName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bIsElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ClientEffectAppliedToSelfCallback",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.EffectAppliedToSelfCallback")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ServerLearnSkill",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.LearnSkill")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
