--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,3 @@
-[ConsoleVariables]
-net.MaxRPCPerNetUpdate=10
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartLevel.StartLevel
 EditorStartupMap=/Game/Maps/StartLevel.StartLevel
@@ -91,7 +88,7 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MagaGameMode",NewName="/Script/ProjectGASRPG.MageGameMode")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassInfo",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.AttributeInfo",NewName="/Script/ProjectGASRPG.AttributeDataAsset")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClassDefaultInfo",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClassDefaultInfos")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClassDefaultInfo",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClass_To_CharacterClassDefaultInfo")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.VitalAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.VitalAttribute")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.PrimaryAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.PrimaryAttribute")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttributes",NewName="/Script/ProjectGASRPG.CharacterClassDefaultInfo.SecondaryAttribute")
@@ -163,6 +160,12 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ClientEffectAppliedToSelfCallback",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.EffectAppliedToSelfCallback")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemComponent.ServerLearnSkill",NewName="/Script/ProjectGASRPG.MageAbilitySystemComponent.LearnSkill")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeathCallback",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OwnerDeathCallback")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClassDefaultInfos",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClass_To_CharacterClassDefaultInfo")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClass_To_DefaultInfos",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClass_To_CharacterClassDefaultInfo")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.DefaultAttributes",NewName="/Script/ProjectGASRPG.MageCharacter.DefaultAttributeEffects")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.InitDefaultAttributes",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.InitDefaultAttributesByCharacterClass")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.ListenForCooldownChange",NewName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
