重构03 复用Cost和Cooldown GE

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -166,6 +166,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.DefaultAttributes",NewName="/Script/ProjectGASRPG.MageCharacter.DefaultAttributeEffects")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.InitDefaultAttributes",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.InitDefaultAttributesByCharacterClass")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.ListenForCooldownChange",NewName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.CooldownStart",NewName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.OnCooldownBegin")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.CooldownEnd",NewName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.OnCooldownEnd")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
