--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,7 +12,9 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Fireball",DevComment="发射火球")
 +GameplayTagList=(Tag="Event.Montage.Laser",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Test",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.CastingLoop",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ElectricStun",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.MeleeAttack",DevComment="")
++GameplayTagList=(Tag="GameplayCue.TEST",DevComment="")
 
