重构04 目标选择逻辑

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -165,9 +165,19 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClass_To_DefaultInfos",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset.CharacterClass_To_CharacterClassDefaultInfo")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacter.DefaultAttributes",NewName="/Script/ProjectGASRPG.MageCharacter.DefaultAttributeEffects")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.InitDefaultAttributes",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.InitDefaultAttributesByCharacterClass")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.ListenForCooldownChange",NewName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.CooldownStart",NewName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.OnCooldownBegin")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.CooldownEnd",NewName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.OnCooldownEnd")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.ListenForCooldownChange",NewName="/Script/ProjectGASRPG.AsyncTask_CooldownChanged")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.CooldownStart",NewName="/Script/ProjectGASRPG.AsyncTask_CooldownChanged.OnCooldownBegin")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged.CooldownEnd",NewName="/Script/ProjectGASRPG.AsyncTask_CooldownChanged.OnCooldownEnd")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.AbilityTask_PlayMontageAndWaitForGameplayEvent.PlayMontageAndWaitForEvent",NewName="/Script/ProjectGASRPG.AbilityTask_PlayMontageAndWaitForGameplayEvent.PlayMontageAndWaitForGameplayEvent")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.TargetDataUnderMouse",NewName="/Script/ProjectGASRPG.AbilityTask_TargetHitUnderCursor")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.AbilityTask_TargetHitUnderCursor.CreateTargetDataUnderMouse",NewName="/Script/ProjectGASRPG.AbilityTask_TargetHitUnderCursor.WaitTargetHitUnderCursor")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskAttributeChanged",NewName="/Script/ProjectGASRPG.AsyncTask_AttributeChanged")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged",NewName="/Script/ProjectGASRPG.AsyncTask_CooldownChanged")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.LastActor",NewName="/Script/ProjectGASRPG.MagePlayerController.LastTargetingActor")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.CurrentActor",NewName="/Script/ProjectGASRPG.MagePlayerController.CurrentTargetingActor")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.LastTargetActor",NewName="/Script/ProjectGASRPG.MagePlayerController.LastTargetingActor")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.CurrentTargetActor",NewName="/Script/ProjectGASRPG.MagePlayerController.CurrentTargetingActor")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.TargettingTime",NewName="/Script/ProjectGASRPG.MagePlayerController.TargetingTime")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
