重构06 Dash加速跑

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -178,6 +178,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.LastTargetActor",NewName="/Script/ProjectGASRPG.MagePlayerController.LastTargetingActor")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.CurrentTargetActor",NewName="/Script/ProjectGASRPG.MagePlayerController.CurrentTargetingActor")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.TargettingTime",NewName="/Script/ProjectGASRPG.MagePlayerController.TargetingTime")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.Cost",NewName="/Script/ProjectGASRPG.MageGameplayAbility.ManaCost")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MMC_AbilityCost",NewName="/Script/ProjectGASRPG.MMC_AbilityManaCost")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
