--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -15,6 +15,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Test",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Test2",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.CastingLoop",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ElectricStun",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TEST",DevComment="")
