重构07 活力值恢复被动GA

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="Attribute.Vital",NewTagName="Attribute.Base")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Buff.RestoreVitality",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Fireball",DevComment="发射火球")
 +GameplayTagList=(Tag="Event.Montage.Laser",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Test",DevComment="")
