GAS重构09 目标选中UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -171,7 +171,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.AbilityTask_PlayMontageAndWaitForGameplayEvent.PlayMontageAndWaitForEvent",NewName="/Script/ProjectGASRPG.AbilityTask_PlayMontageAndWaitForGameplayEvent.PlayMontageAndWaitForGameplayEvent")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.TargetDataUnderMouse",NewName="/Script/ProjectGASRPG.AbilityTask_TargetHitUnderCursor")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.AbilityTask_TargetHitUnderCursor.CreateTargetDataUnderMouse",NewName="/Script/ProjectGASRPG.AbilityTask_TargetHitUnderCursor.WaitTargetHitUnderCursor")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskAttributeChanged",NewName="/Script/ProjectGASRPG.AsyncTask_AttributeChanged")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskAttributeChanged",NewName="/Script/ProjectGASRPG.AsyncTask_TargetingActorChanged")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTaskCooldownChanged",NewName="/Script/ProjectGASRPG.AsyncTask_CooldownChanged")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.LastActor",NewName="/Script/ProjectGASRPG.MagePlayerController.LastTargetingActor")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.CurrentActor",NewName="/Script/ProjectGASRPG.MagePlayerController.CurrentTargetingActor")
@@ -180,6 +180,12 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.TargettingTime",NewName="/Script/ProjectGASRPG.MagePlayerController.TargetingTime")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.Cost",NewName="/Script/ProjectGASRPG.MageGameplayAbility.ManaCost")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MMC_AbilityCost",NewName="/Script/ProjectGASRPG.MMC_AbilityManaCost")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_AttributeChanged",NewName="/Script/ProjectGASRPG.AsyncTask_TargetingActorChanged")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_TargetingActorChanged.OnTargetingActorChanged",NewName="/Script/ProjectGASRPG.AsyncTask_TargetingActorChanged.OnTargetingChanged")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.StoreMouseDataInfo",NewName="/Script/ProjectGASRPG.BeamGA.GetTargetingInfo")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.MouseHitLocation",NewName="/Script/ProjectGASRPG.BeamGA.TargetingActorLocation")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.MouseHitActor",NewName="/Script/ProjectGASRPG.BeamGA.TargetingActor")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageEnemy.HUDHealthBar",NewName="/Script/ProjectGASRPG.MageEnemy.HUDHealthBarClass")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
