GAS重构10 Targetting逻辑和技能类名

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,7 +83,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageUserWidget.WidgetControllerSet",NewName="/Script/ProjectGASRPG.MageUserWidget.OnSetWidgetController")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.PhysicalAttack_Max",NewName="/Script/ProjectGASRPG.MMC_MaxPhysicalAttack")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageWidgetController.BrodcastInitialValue",NewName="/Script/ProjectGASRPG.MageWidgetController.BroadcastInitialValue")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpell",NewName="/Script/ProjectGASRPG.ProjectileGA")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpell",NewName="/Script/ProjectGASRPG.MageGA_Projectile")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponMesh",NewName="/Script/ProjectGASRPG.MageCharacterBase.Weapon")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MagaGameMode",NewName="/Script/ProjectGASRPG.MageGameMode")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.CharacterClassInfo",NewName="/Script/ProjectGASRPG.CharacterClassDataAsset")
@@ -101,8 +101,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.CharacterTags",NewName="/Script/ProjectGASRPG.MageCharacterBase.GameplayTags")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.ExecCalc_Fireball_Damage",NewName="/Script/ProjectGASRPG.ExecCalc_Damage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponTipSocket")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypes",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageType_To_AbilityDamage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypeTag_To_AbilityDamage")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageTypes",NewName="/Script/ProjectGASRPG.MageGA_Damage.DamageTypeTag_To_AbilityDamage")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.DamageType_To_AbilityDamage",NewName="/Script/ProjectGASRPG.MageGA_Damage.DamageTypeTag_To_AbilityDamage")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackMontageTag_WeaponSocket_Map",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocation",NewName="/Script/ProjectGASRPG.ICombatInterface.GetWeaponSocketLocationByMontageTag")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.WeaponSocketName",NewName="/Script/ProjectGASRPG.MageCharacterBase.WeaponAttachSocket")
@@ -132,29 +132,29 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.AbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGameplayAbility.DefaultAbilityLevel",NewName="/Script/ProjectGASRPG.MageGameplayAbility.StartupAbilityLevel")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.CheckButtonEnableOnSkillIconSelected",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.OnSkillIconSelectedDelegate")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.ProjectileGA.MaxProjectilesNum")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.ProjectileGA.MaxProjectilesNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.NumProjectile",NewName="/Script/ProjectGASRPG.MageGA_Projectile.MaxProjectilesNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileCount",NewName="/Script/ProjectGASRPG.MageGA_Projectile.MaxProjectilesNum")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityTypeImage",NewName="/Script/ProjectGASRPG.MageAbilityInfo.AbilityBackgroundImage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipButtonPressed",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.EquipSkillButtonPressed")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconReassignedDelegate",NewName="/Script/ProjectGASRPG.SkillTreeWidgetController.SkillIconResetDelegate")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.Damage",NewName="/Script/ProjectGASRPG.MageDamageGameplayAbility.TypeDamage")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility.Damage",NewName="/Script/ProjectGASRPG.MageGA_Damage.TypeDamage")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChanged",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.DebuffChangedCallback")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeath",NewName="/Script/ProjectGASRPG.DebuffNiagaraComponent.OnOwnerDeathCallback")
-+FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnProjectiles",NewName="/Script/ProjectGASRPG.ProjectileGA.SpawnMultiProjectiles")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.SpawnProjectiles",NewName="/Script/ProjectGASRPG.MageGA_Projectile.SpawnMultiProjectiles")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.TaggedMontage.SocketTag",NewName="/Script/ProjectGASRPG.TaggedMontage.AttackSocketTag")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum",NewName="/Script/ProjectGASRPG.ProjectileGA.MaxProjectilesNum")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA.MaxProjectileNum",NewName="/Script/ProjectGASRPG.MageGA_Projectile.MaxProjectilesNum")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputConfig",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputDataAsset",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MageInputConfigDataAsset",NewName="/Script/ProjectGASRPG.InputConfigDataAsset")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagePlayerController.MageInputConfig",NewName="/Script/ProjectGASRPG.MagePlayerController.InputConfigDataAsset")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA",NewName="/Script/ProjectGASRPG.ProjectileGA")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.MageSummonAbility",NewName="/Script/ProjectGASRPG.SummonGA")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.MageMeleeAttackGA",NewName="/Script/ProjectGASRPG.MeleeAttackGA")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.BeamGameplayAbility",NewName="/Script/ProjectGASRPG.BeamGA")
-+FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.StoreAdditonalTarget",NewName="/Script/ProjectGASRPG.BeamGA.StoreAdditionalTarget")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageProjectileSpellGA",NewName="/Script/ProjectGASRPG.MageGA_Projectile")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageSummonAbility",NewName="/Script/ProjectGASRPG.MageGA_Summon")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageMeleeAttackGA",NewName="/Script/ProjectGASRPG.MageGA_MeleeAttack")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.BeamGameplayAbility",NewName="/Script/ProjectGASRPG.MageGA_Beam")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.StoreAdditonalTarget",NewName="/Script/ProjectGASRPG.MageGA_Beam.StoreAdditionalTarget")
 +FunctionRedirects=(OldName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestPlayer",NewName="/Script/ProjectGASRPG.MageAbilitySystemLibrary.GetClosestActors")
-+FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback",NewName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback")
-+FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback",NewName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnTargetDiedCallback",NewName="/Script/ProjectGASRPG.MageGA_Beam.OnAdditionalTargetDiedCallback")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.OnAdditionalTargetDiedCallback",NewName="/Script/ProjectGASRPG.MageGA_Beam.OnTargetDiedCallback")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.bIsElectricShocked",NewName="/Script/ProjectGASRPG.MageCharacterBase.bIsStun")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_AttackTriggerSocket",NewName="/Script/ProjectGASRPG.MageCharacterBase.AttackSocketTag_To_WeaponSocket")
@@ -182,10 +182,17 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MMC_AbilityCost",NewName="/Script/ProjectGASRPG.MMC_AbilityManaCost")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_AttributeChanged",NewName="/Script/ProjectGASRPG.AsyncTask_TargetingActorChanged")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.AsyncTask_TargetingActorChanged.OnTargetingActorChanged",NewName="/Script/ProjectGASRPG.AsyncTask_TargetingActorChanged.OnTargetingChanged")
-+FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.StoreMouseDataInfo",NewName="/Script/ProjectGASRPG.BeamGA.GetTargetingInfo")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.MouseHitLocation",NewName="/Script/ProjectGASRPG.BeamGA.TargetingActorLocation")
-+PropertyRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.MouseHitActor",NewName="/Script/ProjectGASRPG.BeamGA.TargetingActor")
++FunctionRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.StoreMouseDataInfo",NewName="/Script/ProjectGASRPG.MageGA_Beam.GetTargetingInfo")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.MouseHitLocation",NewName="/Script/ProjectGASRPG.MageGA_Beam.TargetingActorLocation")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.BeamGA.MouseHitActor",NewName="/Script/ProjectGASRPG.MageGA_Beam.TargetingActor")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageEnemy.HUDHealthBar",NewName="/Script/ProjectGASRPG.MageEnemy.HUDHealthBarClass")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.BeamGA",NewName="/Script/ProjectGASRPG.MageGA_Beam")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageDamageGameplayAbility",NewName="/Script/ProjectGASRPG.MageGA_Damage")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MagePassiveAbility",NewName="/Script/ProjectGASRPG.MageGA_Passive")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MeleeAttackGA",NewName="/Script/ProjectGASRPG.MageGA_MeleeAttack")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.ProjectileGA",NewName="/Script/ProjectGASRPG.MageGA_Projectile")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.RadiusGA",NewName="/Script/ProjectGASRPG.MageGA_Radius")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.SummonGA",NewName="/Script/ProjectGASRPG.MageGA_Summon")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
