--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Buff.RestoreVitality",DevComment="")
 +GameplayTagList=(Tag="Cooldown.Move.Teleport",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Fireball",DevComment="发射火球")
++GameplayTagList=(Tag="Event.Montage.IceBlast",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Laser",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Test",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Test2",DevComment="")
@@ -21,6 +22,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.CastingLoop",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Dash",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.ElectricStun",DevComment="")
++GameplayTagList=(Tag="GameplayCue.IceBlast",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.MeleeAttack",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Teleport",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.TEST",DevComment="")
