--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.CustomDepth=3
 r.SkinCache.CompileShaders=True
+r.AntiAliasingMethod=4
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -191,7 +193,7 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MagePassiveAbility",NewName="/Script/ProjectGASRPG.MageGA_Passive")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MeleeAttackGA",NewName="/Script/ProjectGASRPG.MageGA_MeleeAttack")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.ProjectileGA",NewName="/Script/ProjectGASRPG.MageGA_Projectile")
-+ClassRedirects=(OldName="/Script/ProjectGASRPG.RadiusGA",NewName="/Script/ProjectGASRPG.MageGA_Radius")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.RadiusGA",NewName="/Script/ProjectGASRPG.MageGA_AOE")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.SummonGA",NewName="/Script/ProjectGASRPG.MageGA_Summon")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionConstantForce.AvatarActor",NewName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionConstantForce.TargetAvatarActor")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionConstantForce.TargetActor",NewName="/Script/ProjectGASRPG.MageAT_ApplyTargetRootMotionConstantForce.TargetAvatarActor")
@@ -202,6 +204,14 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.AbilityTargetActor_CursorTrace",NewName="/Script/ProjectGASRPG.MageTargetActor_CursorTrace")
 +ClassRedirects=(OldName="/Script/ProjectGASRPG.MyClass",NewName="/Script/ProjectGASRPG.MagicCircle")
 +PropertyRedirects=(OldName="/Script/ProjectGASRPG.MagicCircle.Decal",NewName="/Script/ProjectGASRPG.MagicCircle.DecalComponent")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.ConePointClass",NewName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.MagicCircleClass")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.MeteorClass",NewName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.AbilityActorClass")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.ConePoint",NewName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.MagicCircle")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.Meteor",NewName="/Script/ProjectGASRPG.MageTargetActor_LocationRelease.AbilityActor")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius.RangeHeight",NewName="/Script/ProjectGASRPG.MageGA_AOE.RangeHalfHeight")
++PropertyRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius.RangeHeight",NewName="/Script/ProjectGASRPG.MageGA_AOE.RangeHalfHeight")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius",NewName="/Script/ProjectGASRPG.MageGA_AOE")
++ClassRedirects=(OldName="/Script/ProjectGASRPG.MageGA_Radius",NewName="/Script/ProjectGASRPG.MageGA_AOE")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
@@ -245,6 +255,7 @@ bAllowClientSideNavigation=True
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Target")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="SkillRange")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
